@@ -2,6 +2,7 @@ UNRELEASED CHANGES:
 
 * Add ability to archive a contact
 * Add right-click support on contact list
+* Standardize phonenumber format while importing vCard
 * Set currency and timezone for new users
 * Fix settings' sidebar links and change security icon
 * Fix CSV import
